--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -45,7 +45,7 @@ h6 {
 }
 h1 {
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 h2 {
     font-weight: 700;
